--- a/VueDemo/VueDemo/WWW/index.html
+++ b/VueDemo/VueDemo/WWW/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Parcel-VUE零配置开发模板</title>
-    <link rel="icon" href="http://img.xserver.top/logo_parcel-vue.png" type="image/x-icon" />
+    <link rel="icon" href="static/img/logo.png" type="image/x-icon" />
 </head>
 
 <body>
