--- a/VueDemo/VueDemo/WWW/index.html
+++ b/VueDemo/VueDemo/WWW/index.html
@@ -1,16 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Parcel-VUE零配置开发模板</title>
+    <title>资源屋</title>
     <link rel="icon" href="static/img/logo.png" type="image/x-icon" />
 </head>
-
 <body>
     <div id="app"></div>
     <script src="./src/main.js"></script>
 </body>
-
 </html>
